laravel skill add

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                     <div class="carousel-item active">
                         <div class="row justify-content-around">
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/html.png">
                                     </div>
@@ -153,7 +154,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/css.png">
                                     </div>
@@ -164,7 +166,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/bootstrap.png">
                                     </div>
@@ -179,7 +182,8 @@
                     <div class="carousel-item">
                         <div class="row justify-content-around">
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/javascript.png">
                                     </div>
@@ -190,7 +194,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/jquery.png">
                                     </div>
@@ -201,8 +206,50 @@
                                         website.</p>
                                 </div>
                             </div>
+
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
+                                    <div>
+                                        <img src="/image/services-img/github.png">
+                                    </div>
+                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank" href="https://github.com/"
+                                            class="text-dark">GitHub</a></h5>
+                                    <p>GitHub is a code hosting platform for version control and collaboration.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-around">
+                            <div class="col-lg-3 col-sm-6 mb-4">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
+                                    <div>
+                                        <img src="/image/services-img/php.png">
+                                    </div>
+                                    <h5 class="my-3 text-uppercase"><a target="_blank"
+                                            href="https://www.w3schools.com/php/default.asp" class="text-dark">PHP</a>
+                                    </h5>
+                                    <p class="mb-0">PHP is a general-purpose scripting language geared toward web
+                                        development.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6 mb-4">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
+                                    <div>
+                                        <img src="/image/services-img/mysql.png">
+                                    </div>
+                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank"
+                                            href="https://www.w3schools.com/sql/default.asp" class="text-dark">mysql</a>
+                                    </h5>
+                                    <p>SQL is a standard language for storing data in databases.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-sm-6 mb-4">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/react.png">
                                     </div>
@@ -217,19 +264,20 @@
                     <div class="carousel-item">
                         <div class="row justify-content-around">
                             <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
-                                        <img src="/image/services-img/php.png">
+                                        <img src="/image/services-img/laravel.png">
                                     </div>
                                     <h5 class="my-3 text-uppercase"><a target="_blank"
-                                            href="https://www.w3schools.com/php/default.asp" class="text-dark">PHP</a>
+                                            href="https://laravel.com/" class="text-dark">Laravel</a>
                                     </h5>
-                                    <p class="mb-0">PHP is a general-purpose scripting language geared toward web
-                                        development.</p>
+                                    <p class="mb-0">Laravel is a web application framework with expressive, elegant syntax.</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                            <!-- <div class="col-lg-3 col-sm-6 mb-4">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
                                         <img src="/image/services-img/mysql.png">
                                     </div>
@@ -238,17 +286,19 @@
                                     </h5>
                                     <p>SQL is a standard language for storing data in databases.</p>
                                 </div>
-                            </div>
-                            <div class="col-lg-3 col-sm-6 mb-4">
-                                <div class="card rounded-0 border-0 text-center py-5 px-3">
+                            </div> -->
+                            <!-- <div class="col-lg-3 col-sm-6 mb-4">
+                                <div class="card rounded-0 border-0 text-center py-5 px-3"
+                                    style="min-height: 100%!important;">
                                     <div>
-                                        <img src="/image/services-img/github.png">
+                                        <img src="/image/services-img/react.png">
                                     </div>
-                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank" href="https://github.com/"
-                                            class="text-dark">GitHub</a></h5>
-                                    <p>GitHub is a code hosting platform for version control and collaboration.</p>
+                                    <h5 class="text-uppercase mt-4 mb-3"><a target="_blank"
+                                            href="https://www.w3schools.com/react/default.asp"
+                                            class="text-dark">React</a></h5>
+                                    <p>React is a JavaScript library for building user interfaces.</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -307,9 +357,6 @@
                                 <p></p>
                             </div>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
