--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                         aria-label="Slide 2" class="btnclr active" aria-current="true"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3" class="btnclr " aria-current="true"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4" class="btnclr " aria-current="true"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
