--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="mt-5">
                         <a class="main-btn primary-btn" href="mailto:vibhorpatil808@gmail.com">Hire Me</a>
                         <a class="main-btn secondary-btn ms-4"
-                            href="https://drive.google.com/file/d/1lM4EaOPTL6GjY4r8m86VI5j6XPoQ3xdX/view?usp=share_link"
+                            href="/image/services-img/updated_resume.pdf"
                             target="_blank">Get
                             CV</a>
                     </div>
