--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="mt-5">
                         <a class="main-btn primary-btn" href="mailto:vibhorpatil808@gmail.com">Hire Me</a>
                         <a class="main-btn secondary-btn ms-4"
-                            href="/image/services-img/updated_resume.pdf"
+                            href="/image/resume/my_resume.pdf"
                             target="_blank">Get
                             CV</a>
                     </div>
