--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                     <h5 class="text-uppercase"> Full-Stack Developer</h5>
                     <div class="mt-5">
                         <a class="main-btn primary-btn" href="mailto:vibhorpatil808@gmail.com">Hire Me</a>
-                        <a class="main-btn secondary-btn ms-4"
-                            href="/image/resume/my_resume.pdf"
-                            target="_blank">Get
+                        <a class="main-btn secondary-btn ms-4" href="/image/resume/my_resume.pdf" target="_blank">Get
                             CV</a>
                     </div>
                 </div>
@@ -271,10 +269,11 @@
                                     <div>
                                         <img src="/image/services-img/laravel.png">
                                     </div>
-                                    <h5 class="my-3 text-uppercase"><a target="_blank"
-                                            href="https://laravel.com/" class="text-dark">Laravel</a>
+                                    <h5 class="my-3 text-uppercase"><a target="_blank" href="https://laravel.com/"
+                                            class="text-dark">Laravel</a>
                                     </h5>
-                                    <p class="mb-0">Laravel is a web application framework with expressive, elegant syntax.</p>
+                                    <p class="mb-0">Laravel is a web application framework with expressive, elegant
+                                        syntax.</p>
                                 </div>
                             </div>
                             <!-- <div class="col-lg-3 col-sm-6 mb-4">
@@ -323,6 +322,44 @@
                     <div class="tab-pane fade show active" id="pills-one" role="tabpanel"
                         aria-labelledby="pills-one-tab">
                         <div class="row">
+                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="http://apniprajahitparty.org/" target="_blank">
+                                        <img src="/image/portfolio/app.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Apni Prajahit Party</h5>
+                                <p>I used JavaScript to create dynamic features, MySQL to manage the database, and made
+                                    sure the website was fully responsive. I also included member registration, improved
+                                    payment processing, and ID card creation to provide a complete online experience.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="http://rdcedu.in/" target="_blank">
+                                        <img src="/image/portfolio/rdcedu.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Raje Dharmarao Arts & Commerce College</h5>
+                                <p>Elevated a College website with responsive design, while integrating PHP, MySQL, and
+                                    Bootstrap to manage staff, academic data, and library information, delivering an
+                                    outstanding digital experience.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://www.orangecitynaturals.com/" target="_blank">
+                                        <img src="/image/portfolio/orangecity.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Orangecity Naturals</h5>
+                                <p>I played an important part helping improve the website's functionality with the
+                                    dynamic power of PHP, MySQL, and Bootstrap, as well as in perfecting the
+                                    responsiveness across all devices.</p>
+                            </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="http://advance.bounceball.co.in/" target="_blank">
