new projects added

--- a/index.html
+++ b/index.html
@@ -322,7 +322,64 @@
                     <div class="tab-pane fade show active" id="pills-one" role="tabpanel"
                         aria-labelledby="pills-one-tab">
                         <div class="row">
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://asconsult.in/" target="_blank">
+                                        <img src="/image/portfolio/asconsult.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">AS Consultancy Telemarketing</h5>
+                                <p>Built a responsive website using Bootstrap and PHP Mailer to help Lead Gen India generate leads and grow their business." This line highlights the technologies you used and the purpose of the website
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://mrbsolar.com/" target="_blank">
+                                        <img src="/image/portfolio/mrb.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">MRB Solar Enterprise</h5>
+                                <p>Elevated MRB Solar Enterprise online presence with a responsive e-commerce platform. Built using Bootstrap and Laravel, the website showcases their commitment to sustainable energy solutions, offering a wide range of solar products for a greener future.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="http://jbtfpc.com/" target="_blank">
+                                        <img src="/image/portfolio/bisra.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Jai Birsa Trible Farmer Producer Company ltd</h5>
+                                <p>Empowered Birsa Farms, India's leading integrated rice and vegetable platform, with a responsive website. Utilized Bootstrap, PHP, and MySQL to showcase their commitment to fair compensation for farmers and top-notch agricultural practices, delivering safe and healthy food to consumers worldwide.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://www.seawaycorporation.com/" target="_blank">
+                                        <img src="/image/portfolio/seaway.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">SeaWay Corporation</h5>
+                                <p>Elevated the online presence of SeaWay Corporation, an India-based exporter with a diverse product range, by creating a responsive website. Utilized Bootstrap, PHP, and MySQL to showcase their certifications, memberships, and commitment to quality, strengthening their global supply chain.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
+                                <div class="portfolio-img">
+                                    <a href="https://mahabodhichannel.com/" target="_blank">
+                                        <img src="/image/portfolio/MBC.png" class="img-fluid w-100">
+                                        <div class="overlay"> <i class="fas fa-plus"></i></div>
+                                    </a>
+                                </div>
+                                <h5 class="mb-0 mt-4">Mahaboddhi Channel</h5>
+                                <p>Developed a religious news channel website with Laravel and MySQL, enabling reporters
+                                    to register, log in, and access the admin panel to publish news seamlessly.
+                                    Streamlined the news reporting process for a dynamic online platform.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="http://apniprajahitparty.org/" target="_blank">
                                         <img src="/image/portfolio/app.png" class="img-fluid w-100">
@@ -335,7 +392,7 @@
                                     payment processing, and ID card creation to provide a complete online experience.
                                 </p>
                             </div>
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="http://rdcedu.in/" target="_blank">
                                         <img src="/image/portfolio/rdcedu.png" class="img-fluid w-100">
@@ -348,7 +405,7 @@
                                     outstanding digital experience.
                                 </p>
                             </div>
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="https://www.orangecitynaturals.com/" target="_blank">
                                         <img src="/image/portfolio/orangecity.png" class="img-fluid w-100">
@@ -360,7 +417,7 @@
                                     dynamic power of PHP, MySQL, and Bootstrap, as well as in perfecting the
                                     responsiveness across all devices.</p>
                             </div>
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="http://advance.bounceball.co.in/" target="_blank">
                                         <img src="/image/portfolio/Bounce_Ball.png" class="img-fluid w-100">
@@ -371,7 +428,7 @@
                                 <p>Contributing to responsive website's seamless browsing experience with Bootstrap and
                                     CSS media queries to ensure the best possible experience across all devices.</p>
                             </div>
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="http://iceico.in/" target="_blank">
                                         <img src="/image/portfolio/ICEICO.png" class="img-fluid w-100">
@@ -383,7 +440,7 @@
                                     my expertise in web development and design to create a seamless user experience for
                                     visitors</p>
                             </div>
-                            <div class="col-lg-4 col-sm-6 wow flipInX" data-wow-delay="0.2s">
+                            <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
                                 <div class="portfolio-img">
                                     <a href="https://sachi-int.com/" target="_blank">
                                         <img src="/image/portfolio/Schi_int.png" class="img-fluid w-100">
