--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">AS Consultancy Telemarketing</h5>
-                                <p style="text-align: justify;">Built a responsive website using Bootstrap and PHP Mailer to help Lead Gen India generate leads and grow their business." This line highlights the technologies you used and the purpose of the website
+                                <p style="text-align: justify;">Built a responsive website using Bootstrap and PHP
+                                    Mailer to help Lead Gen India generate leads and grow their business." This line
+                                    highlights the technologies you used and the purpose of the website
                                 </p>
                             </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
@@ -341,7 +343,10 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">MRB Solar Enterprise</h5>
-                                <p style="text-align: justify;">Elevated MRB Solar Enterprise online presence with a responsive e-commerce platform. Built using Bootstrap and Laravel, the website showcases their commitment to sustainable energy solutions, offering a wide range of solar products for a greener future.
+                                <p style="text-align: justify;">Elevated MRB Solar Enterprise online presence with a
+                                    responsive e-commerce platform. Built using Bootstrap and Laravel, the website
+                                    showcases their commitment to sustainable energy solutions, offering a wide range of
+                                    solar products for a greener future.
                                 </p>
                             </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
@@ -352,7 +357,10 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Jai Birsa Trible Farmer Producer Company ltd</h5>
-                                <p style="text-align: justify;">Empowered Birsa Farms, India's leading integrated rice and vegetable platform, with a responsive website. Utilized Bootstrap, PHP, and MySQL to showcase their commitment to fair compensation for farmers and top-notch agricultural practices, delivering safe and healthy food to consumers worldwide.
+                                <p style="text-align: justify;">Empowered Birsa Farms, India's leading integrated rice
+                                    and vegetable platform, with a responsive website. Utilized Bootstrap, PHP, and
+                                    MySQL to showcase their commitment to fair compensation for farmers and top-notch
+                                    agricultural practices, delivering safe and healthy food to consumers worldwide.
                                 </p>
                             </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
@@ -363,7 +371,10 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">SeaWay Corporation</h5>
-                                <p style="text-align: justify;">Elevated the online presence of SeaWay Corporation, an India-based exporter with a diverse product range, by creating a responsive website. Utilized Bootstrap, PHP, and MySQL to showcase their certifications, memberships, and commitment to quality, strengthening their global supply chain.
+                                <p style="text-align: justify;">Elevated the online presence of SeaWay Corporation, an
+                                    India-based exporter with a diverse product range, by creating a responsive website.
+                                    Utilized Bootstrap, PHP, and MySQL to showcase their certifications, memberships,
+                                    and commitment to quality, strengthening their global supply chain.
                                 </p>
                             </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
@@ -374,7 +385,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Mahaboddhi Channel</h5>
-                                <p style="text-align: justify;">Developed a religious news channel website with Laravel and MySQL, enabling reporters
+                                <p style="text-align: justify;">Developed a religious news channel website with Laravel
+                                    and MySQL, enabling reporters
                                     to register, log in, and access the admin panel to publish news seamlessly.
                                     Streamlined the news reporting process for a dynamic online platform.
                                 </p>
@@ -387,7 +399,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Apni Prajahit Party</h5>
-                                <p style="text-align: justify;">I used JavaScript to create dynamic features, MySQL to manage the database, and made
+                                <p style="text-align: justify;">I used JavaScript to create dynamic features, MySQL to
+                                    manage the database, and made
                                     sure the website was fully responsive. I also included member registration, improved
                                     payment processing, and ID card creation to provide a complete online experience.
                                 </p>
@@ -400,7 +413,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Raje Dharmarao Arts & Commerce College</h5>
-                                <p style="text-align: justify;">Elevated a College website with responsive design, while integrating PHP, MySQL, and
+                                <p style="text-align: justify;">Elevated a College website with responsive design, while
+                                    integrating PHP, MySQL, and
                                     Bootstrap to manage staff, academic data, and library information, delivering an
                                     outstanding digital experience.
                                 </p>
@@ -413,7 +427,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Orangecity Naturals</h5>
-                                <p style="text-align: justify;">I played an important part helping improve the website's functionality with the
+                                <p style="text-align: justify;">I played an important part helping improve the website's
+                                    functionality with the
                                     dynamic power of PHP, MySQL, and Bootstrap, as well as in perfecting the
                                     responsiveness across all devices.</p>
                             </div>
@@ -425,7 +440,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Bounce_Ball</h5>
-                                <p style="text-align: justify;">Contributing to responsive website's seamless browsing experience with Bootstrap and
+                                <p style="text-align: justify;">Contributing to responsive website's seamless browsing
+                                    experience with Bootstrap and
                                     CSS media queries to ensure the best possible experience across all devices.</p>
                             </div>
                             <div class="col-lg-4 col-sm-6 wow flipInX my-3" data-wow-delay="0.2s">
@@ -436,7 +452,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">ICEICO</h5>
-                                <p style="text-align: justify;">I contributed to the development and maintenance of my company's website, leveraging
+                                <p style="text-align: justify;">I contributed to the development and maintenance of my
+                                    company's website, leveraging
                                     my expertise in web development and design to create a seamless user experience for
                                     visitors</p>
                             </div>
@@ -448,7 +465,8 @@
                                     </a>
                                 </div>
                                 <h5 class="mb-0 mt-4">Sachi-INT School</h5>
-                                <p style="text-align: justify;">I Developed a Responsive Website with a Gallery and Parent Review Page using HTML,
+                                <p style="text-align: justify;">I Developed a Responsive Website with a Gallery and
+                                    Parent Review Page using HTML,
                                     CSS, Bootstrap, and JavaScript under Mentorship at Iceico to Showcase My Skills.</p>
                                 <p></p>
                             </div>
