--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-7 order-lg-1 order-2 banner-content">
                     <h2 class="text-uppercase position-relative">Hell0</h2>
-                    <h1 class="text-uppercase">I am Vibhor Patil</h1>
+                    <h1 class="text-uppercase">I am Nikhil</h1>
                     <h5 class="text-uppercase"> Full-Stack Developer</h5>
                     <div class="mt-5">
                         <a class="main-btn primary-btn" href="mailto:vibhorpatil808@gmail.com">Hire Me</a>
